force-app/main/default/objects/Map_Finder_Advance_Filter__mdt/Map_Finder_Advance_Filter__mdt.object-meta.xml
<CustomObject>
    <label>Map Finder Advance Filter</label>
    <pluralLabel>Map Finder Advance Filters</pluralLabel>
</CustomObject>