force-app/main/default/objects/Map_Finder_Advance_Filter__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Field in the object to compare value with</description>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>