force-app/main/default/objects/Map_Finder_Advance_Filter__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>