force-app/main/default/objects/Map_Finder_Advance_Filter__mdt/fields/Is_Options_from_Object__c.field-meta.xml
<CustomField>
    <fullName>Is_Options_from_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Options from Object</label>
    <type>Checkbox</type>
</CustomField>