force-app/main/default/objects/Map_Finder_Advance_Filter__mdt/fields/Map_Finder_Instance__c.field-meta.xml
<CustomField>
    <fullName>Map_Finder_Instance__c</fullName>
    <label>Map Finder Instance</label>
    <referenceTo>Map_Finder_Instance__mdt</referenceTo>
    <relationshipLabel>Map Finder Advance Filters</relationshipLabel>
    <relationshipName>Map_Finder_Advance_Filters</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>