force-app/main/default/objects/Map_Finder_Advance_Filter__mdt/fields/Multi_Row__c.field-meta.xml
<CustomField>
    <fullName>Multi_Row__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the field will occupy multiple rows in a grid layout.</description>
    <label>Multi-Row</label>
    <type>Checkbox</type>
</CustomField>