force-app/main/default/objects/Map_Finder_Advance_Filter__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Parent object of the &apos;Field&apos; to compare value with</description>
    <label>Object</label>
    <length>40</length>
    <type>Text</type>
</CustomField>