force-app/main/default/objects/Map_Finder_Advance_Filter__mdt/fields/Object_s_Lookup_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_s_Lookup_API_Name__c</fullName>
    <label>Object&apos;s Lookup API Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>