force-app/main/default/objects/Map_Finder_Advance_Filter__mdt/fields/Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Id__c</fullName>
    <description>Record type Id for determining picklist values</description>
    <label>Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>