force-app/main/default/objects/Map_Finder_Advance_Filter__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>combobox</fullName>
            </value>
            <value>
                <fullName>multi-select</fullName>
            </value>
            <value>
                <fullName>checkbox</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>record-picker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>